--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,7 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/preface.xhtml">Preface</a>
+					<a href="text/foreword.xhtml">Preface</a>
 				</li>
 				<li>
 					<a href="text/introduction-1.xhtml">Names of Persons</a>
