--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,7 +12,7 @@
 				<img alt="The Standard Ebooks logo." src="../images/logo.svg" epub:type="z3998:publisher-logo se:image.color-depth.black-on-transparent"/>
 			</header>
 			<p><i epub:type="se:name.publication.poem">Gudrun</i><br/>
-			was written around 1250.<br/>
+			was written circa 1250.<br/>
 			It was translated from Middle High German in 1889 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Mary_Pickering_Nichols">Mary Pickering Nichols</a>.</p>
 			<p>This ebook was produced for<br/>
