Fix mismatched diacritics

--- a/src/epub/text/introduction-2.xhtml
+++ b/src/epub/text/introduction-2.xhtml
@@ -19,7 +19,7 @@
 					<p><dfn>Alzabie</dfn>⁠—a fabulous Moorland city, the residence of Siegfried.</p>
 				</li>
 				<li>
-					<p><dfn>Amile</dfn>⁠—an imaginary Eastern land, the home of mermaids.</p>
+					<p><dfn>Amilé</dfn>⁠—an imaginary Eastern land, the home of mermaids.</p>
 				</li>
 				<li>
 					<p><dfn>Araby</dfn>⁠—a land whence came fine clothes and treasures.</p>
@@ -94,7 +94,7 @@
 					<p><dfn>Ortland</dfn>⁠—probably Jutland, under the rule of Ortwin.</p>
 				</li>
 				<li>
-					<p><dfn>Salme</dfn>⁠—a fabulous country.</p>
+					<p><dfn>Salmé</dfn>⁠—a fabulous country.</p>
 				</li>
 				<li>
 					<p><dfn>Sealand</dfn>⁠—Herwic’s kingdom, not the Danish Zealand, but probably the sea-lands of Friesland.</p>
