Add writer of foreword metadata

--- a/src/epub/text/foreword.xhtml
+++ b/src/epub/text/foreword.xhtml
@@ -5,7 +5,7 @@
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
-	<body epub:type="frontmatter z3998:fiction">
+	<body epub:type="frontmatter z3998:non-fiction">
 		<section id="foreword" epub:type="foreword">
 			<h2 epub:type="title">Preface</h2>
 			<p>The epic poem of <i epub:type="se:name.publication.poem">Gudrun</i> is one of the most important early literary works of the German race. It is attributed to the latter part of the twelfth or the beginning of the thirteenth century, and to a date a little subsequent to that of the <i epub:type="se:name.publication.poem">Nibelungenlied</i>. It was first brought to the notice of the modern world in the year 1817, the only original manuscript now known to exist having been discovered about that time in the castle Ambras in the Tyrol, among other manuscripts which had been collected by the Emperor Maximilian <span epub:type="z3998:roman">I</span> (1493⁠–⁠1519). The manuscript is now in the Imperial Library at Vienna. It has been several times edited and printed in the original Middle High German, with critical annotations; various translations into modern German have also been published: but so far as I can learn, no complete metrical version in the English language has been made public.</p>
